ui: Implement sketch

--- a/SmartHomeServer/MainWindow.xaml
+++ b/SmartHomeServer/MainWindow.xaml
@@ -5,8 +5,89 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SmartHomeServer"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
-    <Grid>
-        
+        Title="SmartHomeServer" MinHeight="440" Height="440" MaxHeight="440" MinWidth="350" Width="350">
+
+    <Grid VerticalAlignment="Center" HorizontalAlignment="Stretch">
+        <GroupBox Header="Devices:" Margin="8">
+            <Grid>
+                <StackPanel Margin="4" Orientation="Vertical">
+
+                    <GroupBox Header="Light switcher" Margin="8">
+                        <StackPanel Margin="4" Orientation="Vertical">
+
+                            <DockPanel Margin="4">
+                                <Label Content="Connection:" />
+                                <Label Name="LightSwitcherConnectionValueLabel" Content="null" />
+                                
+                                <Button Name="LightSwitcherConnectButton" HorizontalAlignment="Right" Width="64" Content="Connect" />
+                            </DockPanel>
+
+                            <Separator />
+
+                            <DockPanel Margin="4">
+                                <Label Content="Status:" />
+                                <Label Name="LightSwitcherStatusValueLabel" Content="null" />
+
+                                <Button Name="LightSwitcherSwitchButton" HorizontalAlignment="Right" Width="64" Content="Switch" />
+                            </DockPanel>
+
+                        </StackPanel>
+                    </GroupBox>
+
+                    <GroupBox Header="Thermometer" Margin="8">
+                        <StackPanel Margin="4" Orientation="Vertical">
+
+                            <DockPanel Margin="4">
+                                <Label Content="Connection:" />
+                                <Label Name="ThermometerConnectionValueLabel" Content="null" />
+
+                                <Button Name="ThermometerConnectButton" HorizontalAlignment="Right" Width="64" Content="Connect" />
+                            </DockPanel>
+
+                            <Separator />
+
+                            <DockPanel Margin="4">
+                                <Label Content="Update interval:" />
+                                <TextBox Name="UpdateIntervalTextBlock" Width="32" />
+
+                                <Button Name="UpdateIntervalSetButton" HorizontalAlignment="Right" Width="64" Content="Set" />
+                            </DockPanel>
+
+                            <Separator />
+
+                            <DockPanel Margin="4">
+                                <Label Content="Temperature:" />
+                                <Label Name="TemperatureValueLabel" Content="null" />
+
+                                <Button Name="TemperatureUpdateButton" HorizontalAlignment="Right" Width="64" Content="Update" />
+                            </DockPanel>
+
+                        </StackPanel>
+                    </GroupBox>
+
+                    <GroupBox Header="Motion detector" Margin="8">
+                        <StackPanel Margin="4" Orientation="Vertical">
+
+                            <DockPanel Margin="4">
+                                <Label Content="Connection:" />
+                                <Label Name="MotionDetectorConnectionValueLabel" Content="null" />
+
+                                <Button Name="MotionDetectorConnectButton" HorizontalAlignment="Right" Width="64" Content="Connect" />
+                            </DockPanel>
+
+                            <Separator />
+
+                            <DockPanel Margin="4">
+                                <Label Content="Last time:" />
+                                <Label Name="MotionDetectorLastTimeValueLabel" Content="null" />
+                            </DockPanel>
+
+                        </StackPanel>
+                    </GroupBox>
+
+                </StackPanel>
+            </Grid>
+        </GroupBox>
     </Grid>
+        
 </Window>
